# Better-French

./: .gitattributes  .gitignore  CURSOR_RULES.md  CURSOR_RULES.mdc  PROJECT_SUMMARY.md  README.md  RONY_ARCHITECTURE_GUIDE.md  RONY_ENHANCEMENTS_SUMMARY.md  automation_controller.py  demo.py  index.html  netlify.toml  pytest.ini  requirements.txt  reset_articles.py  rolling_articles.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
ai_engine_v3/: README.md  __init__.py  client.py  models.py  personaliser.py  processor.py  pyproject.toml  relevance_llm.py  storage.py  validator.py
ai_engine_v3/data/: mini_glossary.json  state.json
ai_engine_v3/data/_cache/: visited_hashes.json
ai_engine_v3/data/live/: overflow.json  pending_articles.json
ai_engine_v3/mcp_server/: main.py
ai_engine_v3/pipeline/: config.py  curator_v2.py  runner.py  scraper.py  utils.py
ai_engine_v3/pipeline/_cache/: visited_hashes.json
ai_engine_v3/prompts/: contextual_words.jinja  contextual_words_v2.jinja  contextual_words_v3.jinja  simplify_titles_summaries.jinja  simplify_titles_summaries_v2.jinja  simplify_titles_summaries_v3.jinja
ai_engine_v3/scripts/: fetch_news.py  qualify_news.py  quick_test_pipeline.py
ai_engine_v3/website/: index.html  rolling_articles.json  script.js  styles.css  test_articles.json
ai_engine_v3/website/04_Data_Output/Archive/: curated_news_data_20250531_085607.json  french_news_data_20250531_081722.csv  french_news_data_20250531_081722.json  rejected_news_data_20250531_085607.json  rejected_news_data_20250531_091759.json
ai_engine_v3/website/04_Data_Output/Curated/: curated_news_data_20250531_095437.json
ai_engine_v3/website/04_Data_Output/Processed/: ai_processed_20250531_095437_20250531_102500.json
ai_engine_v3/website/04_Data_Output/Processed_AI/: ai_processed_curated_news_data_20250531_095437_20250531_145251.json  ai_processed_curated_news_data_20250531_095437_20250531_150551.json
ai_engine_v3/website/backups/: rolling_20250620_111923.json  rolling_20250620_150556.json  rolling_20250620_152129.json  rolling_20250620_221936.json  rolling_20250620_232031.json  rolling_20250621_031356.json  rolling_20250621_042456.json  rolling_20250621_062709.json  rolling_20250621_071856.json  rolling_20250621_171716.json  rolling_20250621_182805.json  rolling_20250621_190016.json  rolling_20250621_190446.json  rolling_20250621_191731.json  rolling_20250621_205421.json  rolling_20250621_210949.json  rolling_20250621_211738.json  rolling_20250621_221818.json  rolling_20250622_014601.json  rolling_20250622_092014.json  rolling_20250622_211801.json  rolling_20250623_063245.json  rolling_20250623_092429.json  rolling_20250623_093801.json  rolling_20250623_102404.json  rolling_20250623_155258.json  rolling_20250623_160605.json  rolling_20250623_212023.json  rolling_20250623_222004.json  rolling_20250624_031938.json  rolling_20250624_052207.json  rolling_20250624_102254.json  rolling_20250624_162657.json  rolling_20250624_192008.json  rolling_20250627_121444.json  rolling_20250627_133241.json  rolling_20250627_142211.json  rolling_20250627_144547.json  rolling_20250627_150839.json  rolling_20250627_212002.json  (+3 more)
ai_engine_v3/website/js/: glass-note-tooltip.js
ai_engine_v5/: ARCHITECTURE_README.md  README.md  RONY_ARCHITECTURE_MAP.md  __init__.py  pyproject.toml  run_rony_once.py  test_v5_system.py
ai_engine_v5/config/: __init__.py  rss_sources.py
ai_engine_v5/core/: __init__.py
ai_engine_v5/core/curator/: intelligent_curator.py
ai_engine_v5/core/processor/: __init__.py  website_processor.py  website_processor_old.py
ai_engine_v5/core/scraper/: __init__.py  autonomous_scraper.py
ai_engine_v5/data/: .gitkeep  scraper_data.backup.json  scraper_data.json  test_results.json
ai_engine_v5/website/: index.html
ai_engine_v5/website/backups/: rolling_20250620_072606.json  rolling_20250622_082418.json  rolling_20250622_102021.json  rolling_20250622_221959.json  rolling_20250623_090724.json  rolling_20250623_231648.json  rolling_20250624_013926.json  rolling_20250624_082848.json  rolling_20250624_112041.json  rolling_20250624_173902.json  rolling_20250625_113459.json  rolling_20250627_152233.json  rolling_20250628_031621.json  rolling_20250628_072037.json  rolling_20250628_163648.json  rolling_20250629_065355.json
ai_engine_v5/workflows/: ai_processing.yml  data_collection.yml
(+342 files in other folders)
