[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_engine_v3"
version = "0.1.0"
description = "Better French AI Engine v3"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Better French"}]
license = {text = "MIT"}

[project.optional-dependencies]
all = []

[tool.setuptools.packages.find]
where = ["."] 