[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine-v5"
version = "1.0.0"
description = "AI Engine v5 - Autonomous French news curation with separated workflows"
authors = [
    {name = "Better French Team", email = "team@betterfrench.io"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["french", "news", "ai", "autonomous", "language-learning"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "feedparser>=6.0.10",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/sonianand07/Better-French"
Repository = "https://github.com/sonianand07/Better-French"
Documentation = "https://sonianand07.github.io/Better-French/v5-site/"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_engine_v5*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE"]
ignore = ["E501", "N806", "N803"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 